deploy/canary/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2-versao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-versao
      version: v2
  template:
    metadata:
      labels:
        app: api-versao
        version: v2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: api-versao
        image: kubedevio/api-versao:v2
        resources: {}
        ports:
        - containerPort: 8080
