deploy/canary/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-versao-service
spec:
  selector:
    app: api-versao
    version: v1
  ports:
  - port: 80
    targetPort: 8080
